--- a/sign up.html
+++ b/sign up.html
@@ -24,7 +24,7 @@
         
             <!-- Logo -->
             <a class="navbar-brand" href="#">
-            <img src="assets/compass-navigator-icon 1.svg" alt="Logo" height="130">
+            <img src="assets/Group 2185.png" alt="Logo" height="50">
             </a>
 
             <div class="name">
@@ -77,7 +77,7 @@
                                 <div class="error"></div>
                             </div>
                             <div class="input-control">
-                                <label for="password2">Password again</label>
+                                <label for="password2">Confirm Password</label>
                                 <input id="password2"name="password2" type="password">
                                 <div class="error"></div>
                             </div>
